Bug 267924 - PowerDevil "Disable Desktop Effects" setting is ignored during KDE start
Summary: PowerDevil "Disable Desktop Effects" setting is ignored during KDE start
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 266104 276191 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-03-07 23:17 UTC by timshel
Modified: 2011-09-30 10:22 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description timshel 2011-03-07 23:17:06 UTC
Version:           unspecified (using KDE 4.6.0) 
OS:                Linux

If you for example disable the desktop effects in powersave mode it works fine when you are removing the ac adapter while the laptop is running with KDE but if you instead start the system in battery mode the desktop effects are enabled.

So PowerDevil doesn't check the status during boot. It is likely that all other settings are also ingored without a status change but I haven't checked it.

Reproducible: Always

Steps to Reproduce:
1. Disable Desktop effects for power save in PowerDevil.
2. Power off your laptop.
3. Remove the ac adapter and power it on

Actual Results:  
Desktop effects are enabled after boot.

Expected Results:  
Desktop effects should be disabled.
Comment 1 Christoph Feck 2011-03-08 00:26:51 UTC
It is possible that the power daemon tries to disable compositing but KWin hasn't started yet. Adding kwin maintainers to check if we have a way to get informed when KWin is ready to receive D-Bus commands.
Comment 2 Thomas Lübking 2011-03-08 23:55:14 UTC
like QDBusAbstractInterface::isValid()?

However
a) kwin has only a dbus function to check for the compositing state & one to toggle it - none to explicitly set a mode (this would be nice anyway)
b) kwin is sometimes confused about whether compositing is currently active/enabled

No idea how powedevil handles this but as for now it has to either disable compositing /before/ kwin is up or suspend compositing /after/ kwin is up.

Also see https://git.reviewboard.kde.org/r/100767/ and please provide information about what powerdevil does or requires.
Comment 3 FF777 2011-09-03 00:22:51 UTC
In this bug report: https://bugs.kde.org/show_bug.cgi?id=274048
Martin Gräßlin says that compositing is actually less stressful on your battery than disabling it..
Comment 4 Thomas Lübking 2011-09-03 07:19:11 UTC
No!
He says that TURNING OFF compositing (eg. because the battery is low) is more stressful than just leaving it because of the implications of this action (plasma theme reload, svg rendering, rerender every client to onscreen buffer, ...)

This is only about: "what's best ACTION when your battery is very low."
It does probably not hold for the longtime STATE and rather certainly not with OpenGL compositing.
Comment 5 FF777 2011-09-03 09:16:28 UTC
You're right.. My bad..
Comment 6 Dario Freddi 2011-09-30 09:50:44 UTC
*** Bug 266104 has been marked as a duplicate of this bug. ***
Comment 7 Dario Freddi 2011-09-30 09:51:52 UTC
*** Bug 276191 has been marked as a duplicate of this bug. ***
Comment 8 Dario Freddi 2011-09-30 10:22:35 UTC
Git commit a22b5ea79087a1b0286fe223492dbac4fe67ccec by Dario Freddi.
Committed on 30/09/2011 at 12:20.
Pushed by dafre into branch 'master'.

Removing Disable Desktop Effects in 4.8.

Besides the fact this feature has never worked correctly, Martin confirmed it is
no longer useful, but instead harmful, for how compositing is handled in 4.8+.

CCMAIL: mgraesslin@kde.org
BUG: 267924
BUG: 281240

M  +0    -1    powerdevil/daemon/CMakeLists.txt
M  +0    -1    powerdevil/daemon/actions/bundled/CMakeLists.txt
D  +0    -105  powerdevil/daemon/actions/bundled/disabledesktopeffects.cpp
D  +0    -55   powerdevil/daemon/actions/bundled/disabledesktopeffects.h
D  +0    -99   powerdevil/daemon/actions/bundled/disabledesktopeffectsconfig.cpp
D  +0    -55   powerdevil/daemon/actions/bundled/disabledesktopeffectsconfig.h
D  +0    -114  powerdevil/daemon/actions/bundled/powerdevildisabledesktopeffectsaction.desktop
M  +0    -3    powerdevil/daemon/powerdevilactionpool.cpp

http://commits.kde.org/kde-workspace/a22b5ea79087a1b0286fe223492dbac4fe67ccec