Removing Disable Desktop Effects in 4.8.

Besides the fact this feature has never worked correctly, Martin confirmed it is
no longer useful, but instead harmful, for how compositing is handled in 4.8+.

CCMAIL: mgraesslin@kde.org
BUG: 267924
BUG: 281240